# pclplugin

./: CMakeLists.txt  Doxyfile  PCLPluginConfig.cmake.in  README.md
doc/html/: _mouse_rotation_handler_8h_source.html  _p_c_l_alpha_filter_8h_source.html  _p_c_l_cube_filter_8h_source.html  _p_c_l_iterative_closest_point_8h_source.html  _p_c_l_least_square_8h_source.html  _p_c_l_normal_estimator_8h_source.html  _p_c_l_successive_i_c_p_8h_source.html  _pcl2_vec_8h_source.html  _point_cloud_data_8h_source.html  annotated.html  classes.html  classsofa_1_1pointcloud_1_1_mouse_rotation_handler-members.html  classsofa_1_1pointcloud_1_1_mouse_rotation_handler.html  classsofa_1_1pointcloud_1_1_n_point_cloud_data-members.html  classsofa_1_1pointcloud_1_1_n_point_cloud_data.html  classsofa_1_1pointcloud_1_1_p_c_l_alpha_filter-members.html  classsofa_1_1pointcloud_1_1_p_c_l_alpha_filter.html  classsofa_1_1pointcloud_1_1_p_c_l_cube_filter-members.html  classsofa_1_1pointcloud_1_1_p_c_l_cube_filter.html  classsofa_1_1pointcloud_1_1_p_c_l_iterative_closest_point-members.html  classsofa_1_1pointcloud_1_1_p_c_l_iterative_closest_point.html  classsofa_1_1pointcloud_1_1_p_c_l_least_square-members.html  classsofa_1_1pointcloud_1_1_p_c_l_least_square.html  classsofa_1_1pointcloud_1_1_p_c_l_normal_estimator-members.html  classsofa_1_1pointcloud_1_1_p_c_l_normal_estimator.html  classsofa_1_1pointcloud_1_1_p_c_l_successive_i_c_p-members.html  classsofa_1_1pointcloud_1_1_p_c_l_successive_i_c_p.html  classsofa_1_1pointcloud_1_1_pcl2_vec-members.html  classsofa_1_1pointcloud_1_1_pcl2_vec.html  classsofa_1_1pointcloud_1_1_point_cloud_data-members.html  classsofa_1_1pointcloud_1_1_point_cloud_data.html  classsofa_1_1pointcloud_1_1_point_cloud_merge-members.html  classsofa_1_1pointcloud_1_1_point_cloud_merge.html  classsofa_1_1pointcloud_1_1_vec2_pcl-members.html  classsofa_1_1pointcloud_1_1_vec2_pcl.html  dir_20fb038be898b5accd1a7a3af3b3b919.html  dir_5ed6749cda92e7a1fd1e10fc513f8c2b.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_77df46e6491bd43573bec638ccbf8758.html  dir_a7db3c02a40e9de6649df2f1a6050dee.html  (+17 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
doc/latex/: annotated.tex  classsofa_1_1pointcloud_1_1_mouse_rotation_handler.eps  classsofa_1_1pointcloud_1_1_mouse_rotation_handler.tex  classsofa_1_1pointcloud_1_1_n_point_cloud_data.tex  classsofa_1_1pointcloud_1_1_p_c_l_alpha_filter.eps  classsofa_1_1pointcloud_1_1_p_c_l_alpha_filter.tex  classsofa_1_1pointcloud_1_1_p_c_l_cube_filter.eps  classsofa_1_1pointcloud_1_1_p_c_l_cube_filter.tex  classsofa_1_1pointcloud_1_1_p_c_l_iterative_closest_point.eps  classsofa_1_1pointcloud_1_1_p_c_l_iterative_closest_point.tex  classsofa_1_1pointcloud_1_1_p_c_l_least_square.eps  classsofa_1_1pointcloud_1_1_p_c_l_least_square.tex  classsofa_1_1pointcloud_1_1_p_c_l_normal_estimator.eps  classsofa_1_1pointcloud_1_1_p_c_l_normal_estimator.tex  classsofa_1_1pointcloud_1_1_p_c_l_successive_i_c_p.eps  classsofa_1_1pointcloud_1_1_p_c_l_successive_i_c_p.tex  classsofa_1_1pointcloud_1_1_pcl2_vec.eps  classsofa_1_1pointcloud_1_1_pcl2_vec.tex  classsofa_1_1pointcloud_1_1_point_cloud_data.tex  classsofa_1_1pointcloud_1_1_point_cloud_merge.eps  classsofa_1_1pointcloud_1_1_point_cloud_merge.tex  classsofa_1_1pointcloud_1_1_vec2_pcl.eps  classsofa_1_1pointcloud_1_1_vec2_pcl.tex  hierarchy.tex  md__r_e_a_d_m_e.tex  refman.tex  structsofa_1_1defaulttype_1_1_data_type_info_3_01pointcloud_1_1_n_point_cloud_data_01_4.eps  structsofa_1_1defaulttype_1_1_data_type_info_3_01pointcloud_1_1_n_point_cloud_data_01_4.tex  structsofa_1_1defaulttype_1_1_data_type_info_3_01pointcloud_1_1_point_cloud_data_01_4.eps  structsofa_1_1defaulttype_1_1_data_type_info_3_01pointcloud_1_1_point_cloud_data_01_4.tex  structsofa_1_1defaulttype_1_1_point_cloud_type_info.tex
scenes/: PCLGenerate.scn  PCLTest.scn
src/sofa/PCLPlugin/: PCLLeastSquare.cpp  PCLLeastSquare.h  PCLLeastSquare.inl  PCLTriangleGeometry.cpp  PCLTriangleGeometry.h  PCLTriangleGeometry.inl  PointCloudData.h  PointGeneration.cpp  PointGeneration.h  PointGeneration.inl  initPlugin.cpp
src/sofa/PCLPlugin/filter/: PCLAlphaFilter.cpp  PCLAlphaFilter.h  PCLCubeFilter.cpp  PCLCubeFilter.h  PCLStaticFilter.cpp  PCLStaticFilter.h  Pcl2Vec.cpp  Pcl2Vec.h
src/sofa/PCLPlugin/registration/: NeedleSlicing.cpp  NeedleSlicing.h  NeedleTearing.cpp  NeedleTearing.h  PCLIterativeClosestPoint.h  PCLIterativeClosestPoint.inl  PCLSuccessiveICP.h  PCLTearingAlgorithm.cpp  PCLTearingAlgorithm.h  PCLTearingTriangle.cpp  PCLTearingTriangle.h
src/sofa/PCLPlugin/registration/icp/: PCLIterativeClosestPoint.cpp  PCLIterativeClosestPoint.h  PCLIterativeClosestPoint.inl  PCLIterativeClosestPointSeveralMO.cpp  PCLIterativeClosestPointSeveralMO.h  PCLIterativeClosestPointSeveralMO.inl  PCLIterativeClosestPoint_EXP.cpp  PCLIterativeClosestPoint_EXP.h  PCLIterativeClosestPoint_EXP.inl  PCLSuccessiveICP.cpp  PCLSuccessiveICP.h  PCLSuccessiveICP.inl
src/sofa/PCLPlugin/utils/: MouseRotationHandler.cpp  MouseRotationHandler.h  MouseRotationHandlerSeveralMO.cpp  MouseRotationHandlerSeveralMO.h  PCLNormalEstimator.cpp  PCLNormalEstimator.h
